# cli

./: .env.example  .githooks.ini  .gitignore  .releaserc.js  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  benchmarker-cli.cabal  benchmarker.ini  package.yaml  pyproject.toml  stack.yaml
.github/workflows/: app.yml  haskapp.yml
app/: Main.hs
benchmarker/cli/: __main__.py  run.py
benchmarker/cli/commands/: __init__.py  init.py  run.py
benchmarker/cli/utils/: conf.py  env.py  err.py  gh.py  git.py  msg.py  proc.py
script/: benchmark  bootstrap  lint  precommit  watch
src/: Constants.hs  Lib.hs  Parsers.hs  Types.hs  Utils.hs
tasks/: __init__.py  deps.py  lint.py  run.py  test.py  utils.py
tests/cli/: test_main.py
tests/cli/__snapshots__/: test_main.ambr
